--- a/DentalClinic.UI/src/app/app.component.html
+++ b/DentalClinic.UI/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-layout-header/>
-<router-outlet></router-outlet>
-<app-layout-footer/>
+<div class="wrapper">
+  <main class="main">
+  <router-outlet></router-outlet>
+  </main>
+  <app-layout-footer/>
+</div>
