--- a/DentalClinic.UI/src/app/core/layout/footer/footer.component.html
+++ b/DentalClinic.UI/src/app/core/layout/footer/footer.component.html
@@ -1,5 +1,7 @@
-<div class = "footer block-blue block-padding-small">
-  <p>
-    © 2024 Центральная городская стоматологическая поликлиника города Гродно
-  </p>
-</div>
+<footer>
+  <div class = "block-blue block-padding-small">
+    <p>
+      © 2024 Центральная городская стоматологическая поликлиника города Гродно
+    </p>
+  </div>
+</footer>
