--- a/DentalClinic.UI/src/app/core/auth/registration/registration.component.css
+++ b/DentalClinic.UI/src/app/core/auth/registration/registration.component.css
@@ -4,16 +4,16 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  padding: 5rem;
+  padding: 5rem 1em;
 }
 
 .registration-form {
   display: flex;
   flex-direction: column;
-  gap: 2em;
+  gap: 1em;
   border: 1px solid black;
   border-radius: 1.2em;
-  padding: 2em;
+  padding: 1.5em;
 }
 
 label {
