Rename table style in list.component.css

--- a/DentalClinic.UI/src/app/features/admin-panel/pages/dentists/dentists-list/dentists-list.component.html
+++ b/DentalClinic.UI/src/app/features/admin-panel/pages/dentists/dentists-list/dentists-list.component.html
@@ -2,7 +2,7 @@
   <h4 class="title">Врачи</h4>
   <button class="create-button">Добавить</button>
 
-  <table class="dentists-table">
+  <table class="model-table">
     <thead>
     <tr>
       <th (click)="sort('name')">Имя</th>
