--- a/DentalClinic.UI/src/app/features/admin-panel/pages/patients/patients-list/patients-list.component.html
+++ b/DentalClinic.UI/src/app/features/admin-panel/pages/patients/patients-list/patients-list.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <h4 class="title">Пациенты</h4>
 
-  <table class="dentists-table">
+  <table class="model-table">
     <thead>
     <tr>
       <th (click)="sort('name')">Имя</th>
