Add Specialization create component

--- a/DentalClinic.UI/src/app/features/admin-panel/pages/specializations/specializations-list/specializations-list.component.html
+++ b/DentalClinic.UI/src/app/features/admin-panel/pages/specializations/specializations-list/specializations-list.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <h4 class="title">Специализации</h4>
-  <button class="create-button">Добавить</button>
+  <button class="create-button" (click)="create()">Добавить</button>
 
   <table class="model-table">
     <thead>
