--- a/DentalClinic.UI/src/app/features/appointments/pages/select-specialization/select-specialization.component.html
+++ b/DentalClinic.UI/src/app/features/appointments/pages/select-specialization/select-specialization.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2>Заказ талона</h2>
-  <span>Выбор специальности</span>
+  <span>Выбор специалиста</span>
 
   @for (specialization of specializations; track specialization){
     <div class="content">
