Fix markup in login in registration component

--- a/DentalClinic.UI/src/app/core/auth/login/login.component.html
+++ b/DentalClinic.UI/src/app/core/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="registration-form-container">
+  <h3>Вход</h3>
   <form class="registration-form" [formGroup]="userLoginForm">
-
     <div>
       <label for="email"><span class="red-color">*</span>Электронная почта:</label>
       <div>
