--- a/DentalClinic.UI/src/app/core/auth/registration/registration.component.html
+++ b/DentalClinic.UI/src/app/core/auth/registration/registration.component.html
@@ -1,4 +1,5 @@
 <div class="registration-form-container">
+  <h3>Регистрация</h3>
   <form [formGroup]="userRegistrationForm" class="registration-form">
     <div>
       <label for="email"><span class="red-color">*</span>Электронная почта:</label>
