--- a/DentalClinic.UI/src/app/features/appointments/pages/appointment-details/appointment-details.component.html
+++ b/DentalClinic.UI/src/app/features/appointments/pages/appointment-details/appointment-details.component.html
@@ -6,7 +6,7 @@
          {{appointmentDetails?.dentistSurname}}
          {{appointmentDetails?.dentistPatronymic}}
        </p>
-       <p>Специальность:
+       <p>Специальность
           {{appointmentDetails?.dentistSpecialization}}
        </p>
        <p>
@@ -34,3 +34,4 @@
     </div>
   </div>
 </div>
+<button class="download-button" (click)="downloadPdf()">Скачать</button>
