--- a/DentalClinic.UI/src/app/features/news/news-list/news-list.component.css
+++ b/DentalClinic.UI/src/app/features/news/news-list/news-list.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  align-items: center; /* Center items on larger screens */
+  align-items: center;
 }
 
 .news-item {
@@ -10,7 +10,7 @@
   border: 1px solid #ddd;
   border-radius: 0.5rem;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  width: 100%; /* Full width on smaller screens */
+  width: 100%;
 }
 
 .news-title {
@@ -35,6 +35,7 @@
   .news-item {
     width: auto;
     max-width: 800px;
+    min-width: 450px;
     margin: auto;
   }
 }
