Add news components to routes

--- a/DentalClinic.UI/src/app/features/admin-panel/admin-panel/admin-panel.component.html
+++ b/DentalClinic.UI/src/app/features/admin-panel/admin-panel/admin-panel.component.html
@@ -11,4 +11,7 @@
   <div>
     <a routerLink="working-schedule-list">Список рабочего расписания</a>
   </div>
+  <div>
+    <a routerLink="news-list">Новости</a>
+  </div>
 </div>
