Add patient reenrollment button

--- a/DentalClinic.UI/src/app/features/dentist-panel/pages/dentist-appointments-list/dentist-appointments-list.component.html
+++ b/DentalClinic.UI/src/app/features/dentist-panel/pages/dentist-appointments-list/dentist-appointments-list.component.html
@@ -11,6 +11,9 @@
         <div class="patient">
           <h5>{{appointment.patientName}} {{appointment.patientSurname}} {{appointment.patientPatronymic}}</h5>
         </div>
+        <div>
+          <button class="reenrollment-button" (click)="patientReenrolment(appointment.patientId)">Повторная запись</button>
+        </div>
       </div>
     }
   </div>
