Add patient update component to routes

--- a/DentalClinic.UI/src/app/core/layout/header/header.component.html
+++ b/DentalClinic.UI/src/app/core/layout/header/header.component.html
@@ -36,6 +36,9 @@
       <div>
         <a routerLink="notifications">Уведомления</a>
       </div>
+      <div>
+        <a routerLink="update">Изменить</a>
+      </div>
     }
     <div class="user-name">
       {{ authService.currentUserSignal()?.user!.name }} {{ authService.currentUserSignal()?.user!.surname }}
