Fix markup in appointments-list.component

--- a/DentalClinic.UI/src/app/features/appointments/pages/appointments-list/appointments-list.component.html
+++ b/DentalClinic.UI/src/app/features/appointments/pages/appointments-list/appointments-list.component.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="pagination">
-    <button (click)="previousPage()" [disabled]="!appointmentsDetails?.hasPreviousPage">Previous</button>
-    <button (click)="nextPage()" [disabled]="!appointmentsDetails?.hasNextPage">Next</button>
+    <button (click)="previousPage()" [disabled]="!appointmentsDetails?.hasPreviousPage">Назад</button>
+    <button (click)="nextPage()" [disabled]="!appointmentsDetails?.hasNextPage">Вперед</button>
   </div>
 </div>
