Close side bar when user click

--- a/DentalClinic.UI/src/app/core/layout/burger-menu/burger-menu.component.html
+++ b/DentalClinic.UI/src/app/core/layout/burger-menu/burger-menu.component.html
@@ -1,11 +1,12 @@
 <div class="burger-menu" (click)="toggleMenu()">
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+  <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
   </svg>
 </div>
 
 <div class="side-menu" [ngClass]="{'open': isOpen}">
   <ng-container *ngIf="!authService.isLogin()">
+    <a routerLink="/appointment" class="user-link" (click)="toggleMenu()">Запись</a>
     <a routerLink="/login" (click)="toggleMenu()">Войти</a>
     <a routerLink="/registration" (click)="toggleMenu()">Регистрация</a>
   </ng-container>
