--- a/DentalClinic.UI/src/app/features/appointments/pages/select-dentist/select-dentist.component.css
+++ b/DentalClinic.UI/src/app/features/appointments/pages/select-dentist/select-dentist.component.css
@@ -1,11 +1,11 @@
-.content{
+.content {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
 .block{
-  border: 1px solid black;
+  width: calc(33.33% - 20px);
   margin: 1.5vh;
   line-height: 1;
   display: flex;
@@ -27,4 +27,11 @@
 
 .block:hover .active {
   visibility: visible;
+}
+
+@media screen and (max-width: 700px) {
+  .block {
+    width: 100%;
+    margin: 10px 0;
+  }
 }
