--- a/DentalClinic.UI/src/app/features/appointments/pages/select-specialization/select-specialization.component.css
+++ b/DentalClinic.UI/src/app/features/appointments/pages/select-specialization/select-specialization.component.css
@@ -1,7 +1,7 @@
 .content {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
 .block {
@@ -9,8 +9,10 @@
   height: 8vh;
   border: 1px solid black;
   margin: 1.5vh;
-  display: flex;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .block:hover{
