--- a/DentalClinic.UI/src/app/features/admin-panel/pages/dentists/dentists-list/dentists-list.component.html
+++ b/DentalClinic.UI/src/app/features/admin-panel/pages/dentists/dentists-list/dentists-list.component.html
@@ -24,7 +24,7 @@
         <td>
           <button class="update-button" (click)="router.navigateByUrl('/admin/dentist/'+dentist.id+'/update')">Обновить</button>
           <button class="delete-button" (click)="deleteDentist(dentist.id)">Удалить</button>
-          <button (click)="router.navigateByUrl('/admin/dentist/'+dentist.id+'/working-schedule')">Расписание</button>
+          <button (click)="router.navigateByUrl('/admin/dentist/'+dentist.id+'/working-schedule')" class="schedule-button">Расписание</button>
         </td>
       </tr>
     }
