--- a/src/app/features/admin-panel/admin-panel/admin-panel.component.html
+++ b/src/app/features/admin-panel/admin-panel/admin-panel.component.html
@@ -1,17 +1,37 @@
 <div class="wrapper">
-  <div>
-    <a routerLink="dentists-list">Список врачей</a>
-  </div>
-  <div>
-    <a routerLink="patients-list">Список пациентов</a>
-  </div>
-  <div>
-    <a routerLink="specializations-list">Список специализаций</a>
-  </div>
-  <div>
-    <a routerLink="working-schedule-list">Список рабочего расписания</a>
-  </div>
-  <div>
-    <a routerLink="news-list">Новости</a>
-  </div>
+  <ul>
+    <li>
+      <div>
+        <a routerLink="dentists-list">Врачи</a>
+      </div>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      <div>
+        <a routerLink="patients-list">Пациенты</a>
+      </div>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      <div>
+        <a routerLink="specializations-list">Специализации</a>
+      </div>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      <div>
+        <a routerLink="working-schedule-list">Рабочее расписание</a>
+      </div>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      <div>
+        <a routerLink="news-list">Новости</a>
+      </div>
+    </li>
+  </ul>
 </div>
